bulid login page

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 	                                <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/></dt>
 	                                <dd>
 	                                    <h2>django</h2>
-	                                    <p>bobby</p>
+	                                    <p>bobby</xp>
 	                                </dd>
                                 </dl>
                                 <div class="btn">
@@ -46,8 +46,6 @@
                                 </div>
                             </div>
                         </div>
-
-
 				</div>
 			</div>
 
