--- a/templates/index.html
+++ b/templates/index.html
@@ -19,13 +19,13 @@
     <header>
 		<div  class=" header">
  			<div class="top">
-                {% if request.user.is_authenticated %}
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
-					<!--登录后跳转-->                        
+					<!--登录后跳转-->
                         <a style="color:white" class="fr registerbtn" href="/register/">注册</a>
                         <a style="color:white" class="fr loginbtn" href="/login/">登录</a>
-						
+                        
+                        {% if request.user.is_authenticated %}
 						<div class="personal">
                             <dl class="user fr">
                                 <dd>bobby<img class="down fr" src="/static/images/top_down.png"/></dd>
@@ -36,7 +36,7 @@
 	                                <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/></dt>
 	                                <dd>
 	                                    <h2>django</h2>
-	                                    <p>bobby</xp>
+	                                    <p>bobby</p>
 	                                </dd>
                                 </dl>
                                 <div class="btn">
@@ -45,16 +45,18 @@
                                 </div>
                             </div>
                         </div>
+                        {% else %}
+                        <div class="wp">
+                            <div class="fl"><p>服务电话：<b>33333333</b></p></div>
+                            
+                            <a >  有</a>
+                            <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
+                            <a style="color:white" class="fr loginbtn" href="/login/">登录</a>
+                            
+                        </div>
+                        {% endif %}
 				</div>
-            </div>
-            {% else %}
-            <div class="wp">
-				<div class="fl"><p>服务电话：<b>23333333</b></p></div>
-					<!--登录后跳转-->
-                    <a style="color:white" class="fr registerbtn" href="/register/">注册</a>
-                    <a style="color:white" class="fr loginbtn" href="/login/">登录</a>
-            </div>
-            {% endif %}
+			</div>
 
             <div class="middle">
                 <div class="wp">
@@ -75,7 +77,8 @@
                     </div>
                 </div>
             </div>
-                       
+            
+            
 			<nav>
 				<div class="nav">
 					<div class="wp">
@@ -93,8 +96,9 @@
 						</ul>
 					</div>
 				</div>
-			</nav>    
-		</div>
+			</nav>
+            
+			</div>
     </header>
 </section>
 <!--crumbs start-->
@@ -106,11 +110,12 @@
 				<div class="fl">
 					<div class="imgslide">
 						<ul class="imgs">
+                            
                             <li>
-                                <a href="http://www.imooc.com">
-                                    <img width="1200" height="478" src="/static/media/banner/2016/11/57a801860001c34b12000460.jpg" />
-                                </a>
-                            </li>
+                                    <a href="http://www.imooc.com">
+                                        <img width="1200" height="478" src="/static/media/banner/2016/11/57a801860001c34b12000460.jpg" />
+                                    </a>
+                                </li>
                             
                             <li>
                                     <a href="http://www.projectsedu.com">
