--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@
             </div>
             <div class="fl form-box">
                 <h2>帐号登录</h2>
-                <form action="/login/" method="post" autocomplete="off">
+                <form action="/login/" method="POST" autocomplete="off">
                     <div class="form-group marb20 errorput">
                         <label>用&nbsp;户&nbsp;名</label>
                         <input name="username" id="account_l" type="text" placeholder="手机号/邮箱" />
