--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 
+{% load staticfiles %}
+
 <head>
 	<meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
 	<title>课程机构列表 - 慕学在线网</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/animate.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
+	<link rel="stylesheet" type="text/css" href="{% static, 'css/reset.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static, 'css/animate.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static, 'css/style.css' %}">
     
-    <script src="/static/js/jquery.min.js" type="text/javascript"></script>
-    <script src="/static/js/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
+    <script src="{% static, 'js/jquery.min.js' %}" type="text/javascript"></script>
+    <script src="{% static, 'js/jquery-migrate-1.2.1.min.js' %}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -27,12 +29,12 @@
                                 {% if request.user.is_authenticated %}
 						            <div class="personal">
                                         <dl class="user fr">
-                                        <dd>{{ user.username }}<img class="down fr" src="/static/images/top_down.png"/></dd>
-                                        <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/></dt>
+                                        <dd>{{ user.username }}<img class="down fr" src="{% static, 'images/top_down.png' %}"/></dd>
+                                        <dt><img width="20" height="20" src="{% static, 'media/image/2016/12/default_big_14.png' %}"/></dt>
                                         </dl>
                                         <div class="userdetail">
                             	            <dl>
-	                                            <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/></dt>
+	                                            <dt><img width="80" height="80" src="{% static, 'media/image/2016/12/default_big_14.png' %}"/></dt>
 	                                            <dd>
 	                                                <h2>{{ user.nick_name }}</h2>
 	                                                <p>{{ user.username }}</p>
@@ -56,7 +58,7 @@
 
             <div class="middle">
                 <div class="wp">
-                    <a href="index.html"><img class="fl" src="/static/images/logo.jpg"/></a>
+                    <a href="index.html"><img class="fl" src="{% static, 'images/logo.jpg' %}"/></a>
                     <div class="searchbox fr">
                         <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -69,7 +71,7 @@
                             </ul>
                         </div>
                         <input id="search_keywords" class="fl" type="text" value="" placeholder="请输入搜索内容"/>
-                        <img class="search_btn fr" id="jsSearchBtn" src="/static/images/search_btn.png"/>
+                        <img class="search_btn fr" id="jsSearchBtn" src="{% static, 'images/search_btn.png' %}"/>
                     </div>
                 </div>
             </div>
@@ -82,7 +84,7 @@
 							<li class="active" ><a href="index.html">首页</a></li>
 							<li >
 								<a href="course-list.html">
-									公开课<img class="hot" src="/static/images/nav_hot.png">
+									公开课<img class="hot" src="{% static, 'images/nav_hot.png' %}">
 								</a>
 							</li>
 							<li >
@@ -109,31 +111,31 @@
                             
                             <li>
                                     <a href="http://www.imooc.com">
-                                        <img width="1200" height="478" src="/static/media/banner/2016/11/57a801860001c34b12000460.jpg" />
+                                        <img width="1200" height="478" src="{% static, 'media/banner/2016/11/57a801860001c34b12000460.jpg' %}" />
                                     </a>
                                 </li>
                             
                             <li>
                                     <a href="http://www.projectsedu.com">
-                                        <img width="1200" height="478" src="/static/media/banner/2016/11/57aa86a0000145c512000460.jpg" />
+                                        <img width="1200" height="478" src="{% static, 'media/banner/2016/11/57aa86a0000145c512000460.jpg' %}" />
                                     </a>
                                 </li>
                             
                             <li>
                                     <a href="http://www.projectsedu.com">
-                                        <img width="1200" height="478" src="/static/media/banner/2016/11/57a801860001c34b12000460_z4Vb8zl.jpg" />
+                                        <img width="1200" height="478" src="{% static, 'media/banner/2016/11/57a801860001c34b12000460_z4Vb8zl.jpg' %}" />
                                     </a>
                                 </li>
                             
                             <li>
                                     <a href="http://www.projectsedu.com">
-                                        <img width="1200" height="478" src="/static/media/banner/2016/11/57aa86a0000145c512000460_nMwvoQD.jpg" />
+                                        <img width="1200" height="478" src="{% static, 'media/banner/2016/11/57aa86a0000145c512000460_nMwvoQD.jpg' %}" />
                                     </a>
                                 </li>
                             
                             <li>
                                     <a href="http://www.projectsedu.com">
-                                        <img width="1200" height="478" src="/static/media/banner/2016/11/57aa86a0000145c512000460_GXIBATC.jpg" />
+                                        <img width="1200" height="478" src="{% static, 'media/banner/2016/11/57aa86a0000145c512000460_GXIBATC.jpg' %}" />
                                     </a>
                                 </li>
                             
