--- a/templates/register.html
+++ b/templates/register.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 {% load staticfiles %}
-
 <head>
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
     <title>慕学在线注册</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/login.css">
+    <link rel="stylesheet" type="text/css" href="{% static  'css/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static  'css/login.css' %}">
 
 </head>
 <body>
 <div class="loginbox dialogbox">
     <h1>账号登录</h1>
-    <div class="close jsCloseDialog"><img src="/static/images/dig_close.png"/></div>
+    <div class="close jsCloseDialog"><img src="{% static  'images/dig_close.png' %}"/></div>
     <div class="cont">
         <form id="jsLoginForm" autocomplete="off">
             <div class="box">
@@ -44,7 +42,7 @@
     <!--提示弹出框-->
     <div class="successbox dialogbox" id="jsSuccessTips">
         <h1>成功提交</h1>
-        <div class="close jsCloseDialog"><img src="/static/images/dig_close.png"/></div>
+        <div class="close jsCloseDialog"><img src="{% static  'images/dig_close.png' %}"/></div>
         <div class="cont">
             <h2>您的需求提交成功！</h2>
             <p></p>
@@ -52,9 +50,9 @@
     </div>
     <div  class="noactivebox dialogbox" id="jsUnactiveForm" >
         <h1>邮件验证提示</h1>
-        <div class="close jsCloseDialog"><img src="/static/images/dig_close.png"/></div>
+        <div class="close jsCloseDialog"><img src="{% static  'images/dig_close.png' %}"/></div>
         <div class="center">
-            <img src="/static/images/send.png"/>
+            <img src="{% static  'images/send.png' %}"/>
             <p>我们已经向您的邮箱<span class="green" id="jsEmailToActive">12@13.com</span>发送了邮件，<br/>为保证您的账号安全，请及时验证邮箱</p>
             <p class="a"><a class="btn" id="jsGoToEmail" target="_blank" href="http://mail.qq.com">去邮箱验证</a></p>
             <p class="zy_success upmove"></p>
@@ -89,11 +87,11 @@
                 <div class="imgslide">
                     <ul class="imgs">
 
-                        <li><a href=""><img width="483" height="472" src="/static/images/57a801860001c34b12000460.jpg" /></a></li>
+                        <li><a href=""><img width="483" height="472" src="{% static  'images/57a801860001c34b12000460.jpg' %}" /></a></li>
 
-                        <li><a href=""><img width="483" height="472" src="/static/images/57a801860001c34b12000460.jpg" /></a></li>
+                        <li><a href=""><img width="483" height="472" src="{% static  'images/57a801860001c34b12000460.jpg' %}" /></a></li>
 
-                        <li><a href=""><img width="483" height="472" src="/static/images/57a801860001c34b12000460.jpg" /></a></li>
+                        <li><a href=""><img width="483" height="472" src="{% static  'images/57a801860001c34b12000460.jpg' %}" /></a></li>
 
                     </ul>
                 </div>
@@ -111,10 +109,10 @@
                             <!--<label>手&nbsp;机&nbsp;号</label>-->
                             <!--<input id="jsRegMobile" name="account" type="text" placeholder="请输入您的手机号码" />-->
                         <!--</div>-->
-                        <!--<div class="form-group marb20" id="jsRefreshCode">-->
-                            <!--<label>验&nbsp;证&nbsp;码</label>-->
-                            <!--<input autocomplete="off" class="form-control-captcha mobile-register-captcha" id="mobile-register-captcha_1" name="captcha_m_1" placeholder="请输入验证码" type="text" /> <input class="form-control-captcha mobile-register-captcha" id="mobile-register-captcha_0" name="captcha_m_0" placeholder="请输入验证码" type="hidden" value="29953bacf7005e8469388b449d97d00d523c1706" /> &nbsp;<img src="/captcha/image/29953bacf7005e8469388b449d97d00d523c1706/" alt="captcha" class="captcha" />-->
-                        <!--</div>-->
+                        <!--<div class="form-group marb8 captcha_1">
+                            <label>验     证     码</label>
+                            { register_form.captcha }
+                        <</div>
                         <!--<div class="clearfix">-->
                             <!--<div class="form-group marb8 verify-code">-->
                                 <!--<label>短信验证码</label>-->
@@ -134,7 +132,7 @@
                     <!--</form>-->
                 <!--</div>-->
                 <div class="tab-form">
-                    <form id="email_register_form" method="post" action="register.html" autocomplete="off">
+                    <form id="email_register_form" method="post" action="{% url 'register' %}" autocomplete="off">
                         <div class="form-group marb20 ">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
                             <input  type="text" id="id_email" name="email" value="None" placeholder="请输入您的邮箱地址" />
@@ -145,12 +143,13 @@
                         </div>
                         <div class="form-group marb8 captcha1 ">
                             <label>验&nbsp;证&nbsp;码</label>
-                            <img src="/captcha/image/2f3f82e5f7a054bf5caa93b9b0bb6cc308fb7011/" alt="captcha" class="captcha" /> <input id="id_captcha_0" name="captcha_0" type="hidden" value="2f3f82e5f7a054bf5caa93b9b0bb6cc308fb7011" /> <input autocomplete="off" id="id_captcha_1" name="captcha_1" type="text" />
+                            {{ register_form.captcha }}
                         </div>
                         <div class="error btns" id="jsEmailTips"></div>
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
+                        {% csrf_token %}
                     </form>
                 </div>
                 <p class="form-p">已有账号？<a href="login.html">[立即登录]</a></p>
@@ -160,9 +159,9 @@
 </section>
 
 <input id="isLogin" type="hidden" value="False"/>
-<script src="/static/js/jquery.min.js" type="text/javascript"></script>
-<script src="/static/js/unslider.js" type="text/javascript"></script>
-<script src="/static/js/validateDialog.js"  type="text/javascript"></script>
-<script src="/static/js/login.js"  type="text/javascript"></script>
+<script src="{% static  'js/jquery.min.js' %}" type="text/javascript"></script>
+<script src="{% static  'js/unslider.js' %}" type="text/javascript"></script>
+<script src="{% static  'js/validateDialog.js' %}"  type="text/javascript"></script>
+<script src="{% static  'js/login.js' %}"  type="text/javascript"></script>
 </body>
 </html>
