--- a/templates/register.html
+++ b/templates/register.html
@@ -133,19 +133,24 @@
                 <!--</div>-->
                 <div class="tab-form">
                     <form id="email_register_form" method="post" action="{% url 'register' %}" autocomplete="off">
-                        <div class="form-group marb20 ">
+                        <div class="form-group marb20 {% if register_form.password.errors %} errorput{% endif %}">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
                             <input  type="text" id="id_email" name="email" value="None" placeholder="请输入您的邮箱地址" />
                         </div>
-                        <div class="form-group marb8 ">
+                        <div class="form-group marb8 {% if register_form.password.errors %} errorput{% endif %}">
                             <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
                             <input type="password" id="id_password" name="password"  value="None" placeholder="请输入6-20位非中文字符密码" />
                         </div>
-                        <div class="form-group marb8 captcha1 ">
+                        <div class="form-group marb8 captcha1 {% if register_form.captcha.errors %} errorput{% endif %}">
                             <label>验&nbsp;证&nbsp;码</label>
                             {{ register_form.captcha }}
                         </div>
-                        <div class="error btns" id="jsEmailTips"></div>
+                        <div class="error btns" id="jsEmailTips">
+                            {% for key, error in login_form.errors.items %}
+                            {{ error }}
+                            {% endfor %}
+                            {{ msg }}
+                        </div>
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
