fix register page bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 <div class="wp">
 				<div class="fl"><p>服务电话：<b>23333333</b></p></div>
 				<!--登录后跳转-->
-                    <a style="color:white" class="fr registerbtn" href="{% url "register" %}">注册</a>
+                    <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
                     <a style="color:white" class="fr loginbtn" href="{% url 'login'%}?next={{ request.path }}">登录</a>
 				</div>
             {% endif %}
