--- a/templates/forgetpwd.html
+++ b/templates/forgetpwd.html
@@ -95,6 +95,7 @@
                     <input type="hidden" name="sms_type" value="1">
                     <input class="btn btn-green" id="jsFindPwdBtn" type="submit" value="提交" />
                     <p class="form-p" style="bottom:40px;">您还可以<a href="login.html"> [直接登录]</a></p>
+                    {% csrf_token %}
                 </form>
             </div>
         </div>
