--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -15,7 +15,7 @@
     <div class="resetpassword" id="resetPwdForm">
         <h1>修改密码</h1>
         <p>已经通过验证，请设置新密码</p>
-        <form id="reset_password_form" action="{% url 'modify_pwd' %}" method="POST">
+        <form id="reset_password_form" action="{% url 'modify_pwd' %}" method="post">
             <ul>
                 <li>
                     <span class="">新 密 码 ：</span>
@@ -29,7 +29,7 @@
                     <i></i>
                 </li>
                 <li class="button">
-                    <input type="button" value="提交" onclick="reset_password_form_submit()">
+                    <input type="submit" value="提交" onclick="reset_password_form_submit()">
                 </li>
             </ul>
             {% csrf_token %}
