--- a/templates/org_list.html
+++ b/templates/org_list.html
@@ -36,9 +36,9 @@
 					<h2>所在地区</h2>
 					<div class="more">更多</div>
 					<div class="cont">
-                        <a href="?order_by=&price=all"><span class="active">全部</span></a>
+                        <a href="?order_by=&price=all"><span class="{% ifequal city_id '' %}active2{% endifequal %}">全部</span></a>
                             {% for city in all_citys %}
-                                <a href="?city=1&ct="><span class="">{{ city.name }}</span></a>
+                                <a href="?city={{city.id}}"><span class="{% ifequal city_id city.id|stringformat:'i' %}active2{% endifequal %}">{{ city.name }}</span></a>
                             {% endfor %}
 					</div>
 				</li>
