--- a/templates/org_list.html
+++ b/templates/org_list.html
@@ -54,11 +54,11 @@
 					<li class="{% ifequal sort 'courses' %}active2{% endifequal %}"><a href="?sort=courses&ct={{ category }}&city={{ city_id }}">课程数 &#8595;</a></li>
 				</ul>
             </div>
-            {% for course_org in all_orgs.object_list %}
+            {% for course_org in all_orgs %}
             <dl class="des difdes">
                 <dt>
                     <a href="org-detail-homepage.html">
-                        <img width="200" height="120" class="scrollLoading" data-url="{{ MEDIA_URL }}{{ course_org.image }}"/>
+                        <img width="200" height="120" class="scrollLoading" data-url="{{ MEDIA_URL }}{{ course_org.media }}" src="{% static 'images/pixel.gif' %}"/>
                     </a>
                 </dt>
                 <dd>
