--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
             $.ajax({
                 cache: false,
                 type: "POST",
-                url:"/org/add_ask/",
+                url:"{% url 'org:add_ask' %}",
                 data:$('#jsStayForm').serialize(),
                 async: true,
                 success: function(data) {
