--- a/templates/org_list.html
+++ b/templates/org_list.html
@@ -57,13 +57,13 @@
             {% for course_org in all_orgs.object_list %}
             <dl class="des difdes">
                 <dt>
-                    <a href="org-detail-homepage.html">
+                    <a href="{% url 'org:org_home' course_org.id %}">
                         <img width="200" height="120" class="scrollLoading" data-url="{{ MEDIA_URL }}{{ course_org.media }}" src="{% static 'images/pixel.gif' %}"/>
                     </a>
                 </dt>
                 <dd>
                     <div class="clearfix">
-                         <a href="org-detail-homepage.html">
+                         <a href="org_detail_homepage.html">
                              <h1>{{ course_org.name }}</h1>
                              <div class="pic fl">
 
