--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,9 @@
 							<li >
 								<a href="teachers-list.html">授课教师</a>
 							</li>
-							<li class="active" ><a href="{% url 'org:org_list' %}">授课机构</a></li>
+							<li {% ifequal  '/org/list' request.path|slice:":9" %}
+							 class="active"
+							{% endifequal %}><a href="{% url 'org:org/list/' %}">课程机构</a></li>
 						</ul>
 					</div>
 				</div>
