--- a/templates/base.html
+++ b/templates/base.html
@@ -58,14 +58,14 @@
 							<li  {% ifequal  '/course' request.path|slice:":7" %}
 							 class="active"
 							{% endifequal %}>
-								<a href="{% url 'course:list' %}">
+								<a href="{% url 'index' %}">
 									公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
 								</a>
 							</li>
 							<li {% ifequal  '/org/teacher' request.path|slice:":12" %}
 							 class="active"
 							{% endifequal %}>
-								<a href="{% url 'org:teacher_list' %}">授课教师</a>
+								<a href="{% url 'index' %}">授课教师</a>
 							</li>
 							<li {% ifequal  '/org/list' request.path|slice:":9" %}
 							 class="active"
