--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -73,10 +73,10 @@
 	<div class="wp list personal_list comp">
 		<div class="left">
 			<ul>
-				<li class="active2"><a href="org_detail_homepage.html">机构首页</a></li>
-                <li class=""><a href="org_detail_course.html">机构课程</a></li>
-                <li class=""><a href="org_detail_desc.html">机构介绍</a></li>
-                <li class=""><a href="org_detail_teachers.html">机构讲师</a></li>
+				<li class="{% ifequal current_page 'home' %}active2 {% endifequal %}"><a href="{% url 'org:org_home' course_org.id %}">机构首页</a></li>
+                <li class="{% ifequal current_page 'course' %}active2 {% endifequal %}"><a href="{% url 'org:org_course' course_org.id %}">机构课程</a></li>
+                <li class="{% ifequal current_page 'desc' %}active2 {% endifequal %}"><a href="org_detail_desc.html">机构介绍</a></li>
+                <li class="{% ifequal current_page 'teacher' %}active2 {% endifequal %}"><a href="org_detail_teachers.html">机构讲师</a></li>
 			</ul>
 		</div>
     
