finish all course page

--- a/templates/org_detail_course.html
+++ b/templates/org_detail_course.html
@@ -1,5 +1,6 @@
 {% extends 'org_base.html' %}
 {% block title %}机构课程列表页{% endblock %}
+li>{% block page_path %}机构课程{% endblock %}</li>
 
 {% load staticfiles %}
 
