--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -63,7 +63,7 @@
 	<div class="wp">
 		<ul  class="crumbs">
             <li><a href="{% url 'index' %}">首页</a>></li>
-			<li><a href="{% url 'org:list' %}">课程机构</a>></li>
+			<li><a href="{% url 'org:org_list' %}">课程机构</a>></li>
 			<li>{% block page_path %}机构首页{% endblock %}</li>
 		</ul>
 	</div>
@@ -75,8 +75,8 @@
 			<ul>
 				<li class="{% ifequal current_page 'home' %}active2 {% endifequal %}"><a href="{% url 'org:org_home' course_org.id %}">机构首页</a></li>
                 <li class="{% ifequal current_page 'course' %}active2 {% endifequal %}"><a href="{% url 'org:org_course' course_org.id %}">机构课程</a></li>
-                <li class="{% ifequal current_page 'desc' %}active2 {% endifequal %}"><a href="org_detail_desc.html">机构介绍</a></li>
-                <li class="{% ifequal current_page 'teacher' %}active2 {% endifequal %}"><a href="org_detail_teachers.html">机构讲师</a></li>
+                <li class="{% ifequal current_page 'desc' %}active2 {% endifequal %}"><a href="{% url 'org:org_desc' course_org.id %}">机构介绍</a></li>
+                <li class="{% ifequal current_page 'teacher' %}active2 {% endifequal %}"><a href="{% url 'org:org_teacher' course_org.id %}">机构讲师</a></li>
 			</ul>
 		</div>
     
