--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
 							</li>
 							<li {% ifequal  '/org/list' request.path|slice:":9" %}
 							 class="active"
-							{% endifequal %}><a href="{% url 'org:list' %}">课程机构</a></li>
+							{% endifequal %}><a href="{% url 'org:org_list' %}">课程机构</a></li>
 						</ul>
 					</div>
 				</div>
