--- a/templates/course_detail.html
+++ b/templates/course_detail.html
@@ -7,7 +7,7 @@
 	<div class="wp">
 		<div class="crumbs">
 			<ul>
-				<li><a href="/">首页</a>></li>
+				<li><a href="index.html">首页</a>></li>
                 <li><a href="{% url 'course:course_list' %}">公开课程</a>></li>
 				<li>课程详情</li>
 			</ul>
@@ -50,7 +50,7 @@
 							<div class="btn colectgroupbtn"  id="jsLeftBtn">
                                 {% if has_fav_course %}已收藏{% else %}收藏{% endif %}
                             </div>
-                                <div class="buy btn"><a style="color: white" href="{% url 'course:course_info' course.id %}">开始学习</a></div>
+							<div class="buy btn" onclick="window.location.href= "{% url 'course:course_info' course.id %};return false"><a style="color: white" href="{% url 'course:course_info' course.id %}">开始学习</a></div>
 						</div>
 					</div>
                     <div class="group-share-box">
