--- a/templates/course_comment.html
+++ b/templates/course_comment.html
@@ -136,42 +136,20 @@
 
                         <div class="cp-other-learned  js-comp-tabs">
                             <div class="cp-header clearfix">
-                                <h2 class="cp-tit l">该课的同学还学过</h2>
+                                <h2 class="cp-tit l">学习过该课的同学还学过</h2>
                             </div>
                             <div class="cp-body">
                                 <div class="cp-tab-pannel js-comp-tab-pannel" data-pannel="course" style="display: block">
                                     <!-- img 200 x 112 -->
                                     <ul class="other-list">
+                                        {% for relate_course in relate_courses %}
                                         <li class="curr">
-                                            <a href="/view/85?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/57035ff200014b8a06000338-240-135.jpg" alt="Java入门第一季">
-                                                <span class="name autowrap">Java入门第一季</span>
+                                            <a href="{% url 'course:course_detail' relate_course.id %}" target="_blank">
+                                                <img src="{{MEDIA_URL}}{{ relate_course.image }}" alt="{{ relate_course.name }}">
+                                                <span class="name autowrap">{{ relate_course.name }}</span>
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="/view/110?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/5703604a0001694406000338-240-135.jpg" alt="Java入门第三季">
-                                                <span class="name autowrap">Java入门第三季</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/124?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/570360620001390f06000338-240-135.jpg" alt="Java入门第二季">
-                                                <span class="name autowrap">Java入门第二季</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/47?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/570765d90001bf1406000338-240-135.jpg" alt="Spring MVC起步">
-                                                <span class="name autowrap">Spring MVC起步</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/view/36?src=sug" target="_blank">
-                                                <img src="http://img.mukewang.com/53e1d0470001ad1e06000338-240-135.jpg" alt="JavaScript入门篇">
-                                                <span class="name autowrap">JavaScript入门篇</span>
-                                            </a>
-                                        </li>
+                                        {% endfor %}
                                     </ul>
                                 </div>
                                 <div class="cp-tab-pannel js-comp-tab-pannel" data-pannel="plan">
