--- a/templates/course_video.html
+++ b/templates/course_video.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %}{{ video.name }}-慕学在线网{% endblock %}
+{% block title %}公开课视频信息-慕学在线网{% endblock %}
 
 {% block custom_bread %}
 <section>
@@ -9,8 +9,8 @@
 			<ul>
 				<li><a href="index.html">首页</a>></li>
                 <li><a href="{% url 'course:course_list' %}">公开课程</a>></li>
-                <li><a href="{% url 'course:course_detail' course.id %}">{{ course.name }}</a>></li>
-                <li>{{ video.name }}</li>
+                <li><a href="{% url 'course:course_detail' course.id %}">课程详情</a>></li>
+                <li>章节信息</li>
 			</ul>
 		</div>
 	</div>
