--- a/templates/course_play.html
+++ b/templates/course_play.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% block title %}公开课视频信息-慕学在线网{% endblock %}
+{% block title %}{{ video.name }}-慕学在线网{% endblock %}
 
 {% block custom_bread %}
 <section>
@@ -9,8 +9,8 @@
 			<ul>
 				<li><a href="index.html">首页</a>></li>
                 <li><a href="{% url 'course:course_list' %}">公开课程</a>></li>
-                <li><a href="{% url 'course:course_detail' course.id %}">课程详情</a>></li>
-                <li>章节信息</li>
+                <li><a href="{% url 'course:course_detail' course.id %}">{{ course.name }}</a>></li>
+                <li>{{ video.name }}</li>
 			</ul>
 		</div>
 	</div>
@@ -35,7 +35,6 @@
 
 {block custom_js}
 <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
-
 {endblock}
 
 {% block content %}
@@ -60,7 +59,7 @@
                     </ul>
                 </div>
                 <div id="notice" class="clearfix">
-                    <div class="l"> <strong>课程公告:</strong> <a  href="javascript:void(0)">Spring的文档以及相关的jar文件已上传</a> </div>
+                    <div class="l"> <strong>课程公告:</strong> <a  href="javascript:void(0)">课程相关文件已上传</a> </div>
                 </div>
 
                 <div class="mod-chapters">
@@ -72,7 +71,7 @@
                         <ul class="video">
                             {% for video in lesson.get_lesson_video %}
                             <li>
-                                <a target="_blank" href='{{ lesson.url }}' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_times }})
+                                <a target="_blank" href='{% url "course:video_play" video.id %}' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_times }})
                                     <i class="study-state"></i>
                                 </a>
                             </li>
