--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>33333333</b></p></div>
 					<!--登录后跳转-->
-                        <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                        <a style="color:white" class="fr loginbtn" href="login.html">登录</a>
+                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                        <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
 				</div>
 			</div>
 
@@ -149,6 +149,7 @@
     })
 
 </script>
-{% block custom_js %}{% endblock %}
+{% block custom_js %}
+{% endblock %}
 </body>
 </html>
