--- a/templates/org_detail_homepage.html
+++ b/templates/org_detail_homepage.html
@@ -12,9 +12,9 @@
     <div class="brief group_list">
         {% for course in all_courses %}
             <div class="module1_5 box">
-                <a href="course-detail.html"><img width="214" src="{{ MEDIA_URL }}{{ course.image }}"/></a>
+                <a href="{% url 'course:course_detail' course.id %}"><img width="214" src="{{ MEDIA_URL }}{{ course.image }}"/></a>
                 <div class="des">
-                    <a href="course-detail.html"><h2>{{ course.name }}</h2></a>
+                    <a href="{% url 'course:course_detail' course.id %}"><h2>{{ course.name }}</h2></a>
                     <span class="fl">课时：<i class="key">{{ course.learn_times }}</i></span>
                     <span class="fr">参加人数：{{ course.students }}</span>
                 </div>
@@ -32,7 +32,7 @@
 <div class="right companycenter layout" >
     <div class="head">
         <h1>机构教师</h1>
-        <a class="green fr more" href="org-detail-teachers.html">查看更多  >  </a>
+        <a class="green fr more" href="org_detail_teachers.html">查看更多  >  </a>
     </div>
 
     {% for teacher in all_teacher %}
