--- a/templates/org_list.html
+++ b/templates/org_list.html
@@ -6,7 +6,7 @@
 <section>
     <div class="wp">
         <ul  class="crumbs">
-            <li><a href="index.html">首页</a>></li>
+            <li><a href="{% url 'index' %}">首页</a>></li>
             <li>课程机构</li>
         </ul>
     </div>
@@ -63,7 +63,7 @@
                 </dt>
                 <dd>
                     <div class="clearfix">
-                         <a href="org_detail_homepage.html">
+                         <a href="{% url 'org:org_home' course_org.id %}">
                              <h1>{{ course_org.name }}</h1>
                              <div class="pic fl">
 
