--- a/templates/teachers_list.html
+++ b/templates/teachers_list.html
@@ -6,7 +6,7 @@
 <section>
     <div class="wp">
         <ul  class="crumbs">
-            <li><a href="index.html">首页</a>></li>
+            <li><a href="{% url 'index' %}">首页</a>></li>
             <li>课程讲师</li>
         </ul>
     </div>
@@ -23,7 +23,7 @@
 					<li {% if sort == '' %}class="active"{% endif %}><a href="?sort=">全部</a> </li>
 					<li {% if sort == hot %}class="active"{% endif %}><a href="?sort=hot">人气 &#8595;</a></li>
 				</ul>
-                <div class="fr butler-num">共<span class="key">9</span>人&nbsp;&nbsp;&nbsp;</div>
+                <div class="fr butler-num">共<span class="key">{{ teacher_nums }}</span>人&nbsp;&nbsp;&nbsp;</div>
 			</div>
                 
                 {% for teacher in all_teachers.object_list %}
