finish search function

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,11 @@
 首页 | Hood
 {% endblock %}
 
-{% block content %}
+{% block custom_bread %}
 
+{% endblock %}
+
+{% block content %}
 <!--banner start-->
 <div class="banner">
     <div class="wp">
@@ -138,7 +141,6 @@
         </div>
     </div>
 </section>
-
 {% endblock %}
 
 {% block custom_js %}
