完成个人中心页面: 个人信息修改及展示

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                     <div class="fl"><p>服务电话：<b>33333333</b></p></div>
                     <div class="personal">
                         <dl class="user fr">
-                            <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                            <dd>{{ user.nick_name }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
                             <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                         </dl>
                         <div class="userdetail">
