--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -46,8 +46,8 @@
                         </div>
                         </div>
                     </div>
-                    <a href="my_message.html">
-                        <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                    <a href="{% url 'users:mymessage' %}">
+                        <div class="msg-num"><span id="MsgNum">{{ request.user.get_unread_nums }}</span></div>
                     </a>
                 </div>
             {% else %}
