--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -31,7 +31,7 @@
                         <div class="fl"><p>服务电话：<b>33333333</b></p></div>
                         <div class="personal">
                             <dl class="user fr">
-                                <dd>{{ user.username }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                <dd>{{ request.user.nick_name }}<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
                                 <dt><img width="20" height="20" src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
@@ -48,8 +48,8 @@
                                 </div>
                             </div>
                             </div>
-                            <a href="/users/message/">
-                                <div class="msg-num"><span id="MsgNum">{{ request.user.unread_nums }}</span></div>
+                            <a href="{% url 'users:mymessage' %}">
+                                <div class="msg-num"><span id="MsgNum">{{ request.user.get_unread_nums }}</span></div>
                             </a>
                     </div>
                 {% else %}
@@ -94,7 +94,7 @@
             <li ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
             <li ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
             <li >
-                <a href="usercenter-message.html" style="position: relative;">
+                <a href="{% url 'users:mymessage' %}" style="position: relative;">
                     我的消息
                 </a>
             </li>
