--- a/templates/usercenter_fav_org.html
+++ b/templates/usercenter_fav_org.html
@@ -32,22 +32,22 @@
                 </ul>
             </div>
             <div class="messagelist">
-                {% for orgs in org_list %}  
+                {% for fav_org in org_list %}  
                 <div class="messages butler_list company company-fav-box">
                     <dl class="des fr">
                         <dt>
                             <a href="org_detail_homepage.html">
-                                <img width="160" height="90" src="{{ MEDIA_URL }}{{ orgs.image }}"/>
+                                <img width="160" height="90" src="{{ MEDIA_URL }}{{ fav_org.image }}"/>
                             </a>
                         </dt>
                         <dd>
-                            <h1><a href="org_detail_homepage.html">{{ orgs.name }}</a></h1>
+                            <h1><a href="org_detail_homepage.html">{{ fav_org.name }}</a></h1>
                             <div class="pic fl" style="width:auto;">
                                 <img src="{% static 'images/authentication.png' %}"/>
                                 <img src="{% static 'images/gold.png' %}"/>
                             </div>
                             <span class="c8 clear">{{ orgs.city }}</span>
-                            <div class="delete jsDeleteFav_org" data-favid="{{ orgs.fav_nums }}">{{ orgs.fav_nums }}</div>
+                            <div class="delete jsDeleteFav_org" data-favid="{{ fav_org.fav_nums }}"></div>
                         </dd>
                     </dl>
                 </div>  
