消息数量显示优化

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
 <section>
     <div class="wp">
         <ul  class="crumbs">
-            <li><a href="index.html">首页</a>></li>
+            <li><a href="{% url 'index' %}">首页</a>></li>
         </ul>
     </div>
 </section>
